--- a/iotoro_web/device/templates/device/new_device.html
+++ b/iotoro_web/device/templates/device/new_device.html
@@ -10,19 +10,34 @@
     <link rel="stylesheet" href="{% static 'device.css' %}">
 {% endblock %}
 
+{% block content_title %}
+    Add new device
+{% endblock %}
+
 {% block content %}
 
 <div class="row">
-    <div class="offset-4 col-4 new-device">
+    <div class="offset-1 col-10 offset-xl-3 col-xl-6 new-device">
         <form method="POST" action="{% url 'new_device' %}" class="d-flex flex-column fg-primary">
 
             {% csrf_token %}
 
             {% for field in form %}
-                <label id="{{ field.id_for_label }}">{{ field.label }}</label>
+                <label class="d-flex justify-content-between" id="{{ field.id_for_label }}">
+                    {{ field.label }}
+
+                    <span data-bs-toggle="tooltip" title="{{field.help_text}}">
+                        <svg class="label-help" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                            <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+                        </svg>
+                    </span>
+                    
+                </label>
                 
                 {% if field.widget_type == 'select' %}
-                    <select class="form-select" aria-label="Default select example" name="{{ field.name }}">
+                    <select class="form-select" aria-label="Default select example" name="{{ field.name }}"
+                            >
                         {% for widget in field.subwidgets %}
                             {{ widget }}
                         {% endfor %}
