--- a/iotoro_web/templates/base.html
+++ b/iotoro_web/templates/base.html
@@ -44,15 +44,23 @@
     </nav>
 
     <!-- Sidebar -->
-    <div class="content-wrapper d-flex">
+    <div class="content-wrapper">
         <nav class="sidebar">
             <div class="list-group">
+                <a href="{% url 'index' %}" class="list-group-item sidebar-link">Home</a>
                 <a href="{% url 'new_device' %}" class="list-group-item sidebar-link">Add new device</a>
                 <a href="{% url 'device' %}" class="list-group-item sidebar-link">Devices</a>
             </div>
         </nav>
 
         <div class="content">
+            <div class="content-title text-center">
+                <h2>
+                    {% block content_title %}
+                    {% endblock %}
+                </h2>
+                <hr>
+            </div>
             {% block content %}
 
             {% endblock %}
