--- a/iotoro_web/device/templates/device/overview.html
+++ b/iotoro_web/device/templates/device/overview.html
@@ -4,32 +4,39 @@
     Device overview
 {% endblock %}
 
+
 {% block device_content %}
 
-<h3>Overview</h3>
+<div class="overview row">
 
-<table class="table fg-primary">
-    <tr>
-        <td>Device name</td>
-        <td>{{ selected_device.name }}</td>
-    </tr>
-    <tr>
-        <td>Last received packet</td>
-        {% if latest_packet is not None %}
-            <td>{{ latest_packet.time_diff }} seconds ago</td>
-        {% else %}
-            <td>No packets received</td>
-        {% endif %}
-    </tr>
-    <tr>
-        <td>Total data sent</td>
-        <td>STUFF</td>
-    </tr>
-</table>
+    <div class="col-5 table-container">
+        <table class="table fg-primary">
+            <tr>
+                <td class="bold">Device name</td>
+                <td>{{ selected_device.name }}</td>
+            </tr>
+            <tr>
+                <td class="bold">Last received packet</td>
+                {% if latest_packet is not None %}
+                    <td>{{ latest_packet.time_diff }} seconds ago</td>
+                {% else %}
+                    <td>No packets received</td>
+                {% endif %}
+            </tr>
+            <tr>
+                <td class="bold">Total data sent</td>
+                <td>STUFF</td>
+            </tr>
+        </table>
+    </div>
 
-<canvas id="datachart">
+    <div class="col-7 graph-container">
+        <canvas id="datachart"></canvas>
+    </div>
+    
 
-</canvas>
+</div>
+
 
 {% endblock %}
 
