--- a/iotoro_web/templates/base.html
+++ b/iotoro_web/templates/base.html
@@ -19,6 +19,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
 
 </head>
 <body class="bg-primary">
@@ -32,6 +33,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+            <a class="nav-link" href="{% url 'about' %}">about</a>
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'logout' %}">logout</a>
@@ -46,11 +48,40 @@
     <!-- Sidebar -->
     <div class="content-wrapper">
         <nav class="sidebar">
-            <div class="list-group">
-                <a href="{% url 'index' %}" class="list-group-item sidebar-link">Home</a>
-                <a href="{% url 'new_device' %}" class="list-group-item sidebar-link">Add new device</a>
-                <a href="{% url 'device' %}" class="list-group-item sidebar-link">Devices</a>
+
+            <div class="sidebar-category">
+                <h4 class="sidebar-category-title">Device utils</h4>
+                <hr>
+                <div class="list-group">
+                    <a href="{% url 'index' %}" class="list-group-item sidebar-link">
+                        <i class="bi bi-house-door nav-icon"></i>Home
+                    </a>
+                    <a href="{% url 'new_device' %}" class="list-group-item sidebar-link">
+                        <i class="bi nav-icon bi-file-plus"></i>Add new device
+                    </a>
+                    <a href="{% url 'device' %}" class="list-group-item sidebar-link">
+                        <i class="bi nav-icon bi-cpu"></i>Devices
+                    </a>
+                </div>
             </div>
+
+            <div class="sidebar-category">
+                <h4 class="sidebar-category-title">Resources</h4>
+                <hr>
+                <div class="list-group">
+                    <a href="{% url 'index' %}" class="list-group-item sidebar-link">
+                        <i class="bi nav-icon bi-box-arrow-right"></i>Get started
+                    </a>
+                    <a href="{% url 'new_device' %}" class="list-group-item sidebar-link">
+                        <i class="bi nav-icon bi-book"></i>Docs
+                    </a>
+                    <a href="{% url 'device' %}" class="list-group-item sidebar-link">
+                        <i class="bi nav-icon bi-hammer"></i>Contribute
+                    </a>
+                </div>
+        </div>
+
+
         </nav>
 
         <div class="content">
