--- a/iotoro_web/device/templates/device/device.html
+++ b/iotoro_web/device/templates/device/device.html
@@ -47,19 +47,19 @@
                 <div class="mt-5">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link fg-primary" id="overview" href="{% url 'overview' device_name=selected_device %}">Overview</a>
+                            <a class="nav-link" id="overview" href="{% url 'overview' device_name=selected_device %}">Overview</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fg-primary" id="data" href="{% url 'data' device_name=selected_device %}">Data</a>
+                            <a class="nav-link" id="data" href="{% url 'data' device_name=selected_device %}">Data</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fg-primary" id="attributes" href="{% url 'attributes' device_name=selected_device %}">Attributes</a>
+                            <a class="nav-link" id="attributes" href="{% url 'attributes' device_name=selected_device %}">Attributes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fg-primary" id="settings" href="{% url 'settings' device_name=selected_device %}">Settings</a>
+                            <a class="nav-link" id="settings" href="{% url 'settings' device_name=selected_device %}">Settings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fg-primary" id="triggers" href="{% url 'triggers' device_name=selected_device %}">Triggers</a>
+                            <a class="nav-link" id="triggers" href="{% url 'triggers' device_name=selected_device %}">Triggers</a>
                         </li>
                     </ul>
                 </div>
