Changed from table to boostrap divs

--- a/iotoro_web/device/css/device.css
+++ b/iotoro_web/device/css/device.css
@@ -34,8 +34,23 @@ label, input[type=text], select {
 
 
 /* -- Data -- */
-.data-table tr:nth-child(even) {
+.data-table .table-row:nth-child(even) {
     background-color: #202020;
+}
+
+.data-table .table-header {
+    font-weight: 600;
+    border-bottom: 1px solid rgb(97, 97, 97);
+    margin-bottom: .2em;
+}
+
+.data-table .table-row {
+    padding: .5em 0;
+}
+
+.data-table .table-row-content {
+    padding: 1em;
+    background-color: #191919 !important;
 }
 
 .clickable {
