--- a/iotoro_web/device/templates/device/overview.html
+++ b/iotoro_web/device/templates/device/overview.html
@@ -10,7 +10,7 @@
 <div class="overview row">
 
     <div class="col-5 table-container">
-        <table class="table fg-primary">
+        <table class="fg-primary">
             <tr>
                 <td class="bold">Device name</td>
                 <td>{{ selected_device.name }}</td>
@@ -34,7 +34,6 @@
         <canvas id="datachart"></canvas>
     </div>
     
-
 </div>
 
 
@@ -45,28 +44,25 @@
 
     <script>
     var ctx = document.getElementById('datachart').getContext('2d');
+    Chart.defaults.color = 'white';
+    Chart.defaults.fontSize = 20;
+
+
+    const labels = {{ last_24_hour_labels|safe }};
+    const values = {{ last_24_hour_values|safe }};
+
     var myChart = new Chart(ctx, {
-        type: 'bar',
+        type: 'line',
         data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            labels: labels,
             datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
+                label: 'Packets sent last 24 hours',
+                data: values,
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
                 ],
                 borderColor: [
                     'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
                 ],
                 borderWidth: 1
             }]
